--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you've ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo's favorite part of the entire day!</p>
 			</div>
 			<div class="xs-display-none col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/brandi/Brandi2.jpg">
+				<img class="sect-break under animateblock btm" src="images/brandi/Brandi3.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -443,7 +443,7 @@
 		<div class="container-fluid article blogger-post">
 			<div class="row">
 				<div class="col-xs-7 col-md-7">
-					<img class="over animateblock btm" src="images/brandi/Brandi3.jpg">
+					<img class="over animateblock btm" src="images/brandi/Brandi4.jpg">
 				</div>
 				<div class="col-xs-5 col-md-5">
 					<div class="caption">
@@ -451,14 +451,16 @@
 							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 						</svg>
-						<p class="italc cred">123/Getty Images</p>
+						<p>Don't miss the chance to drive across the iconic Golden Gate Bridge.</p>
+						<p class="italc cred">Narvikk/Getty Images</p>
 					</div>
 					<div class="caption">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 						</svg>
-						<p class="italc cred">Narvikk/Getty Images</p>
+						<p>Life on the water in Sausalito.</p>
+						<p class="italc cred">123/Getty Images</p>
 					</div>
 				</div>
 			</div>
@@ -473,7 +475,7 @@
 					<h5>Sausalito</h5>
 				</div>
 				<div class="col-md-5 col-md-offset-1 col-xs-5 col-xs-offset-1">
-					<img class="xs-display-none sect-break under animateblock btm" src="images/brandi/Brandi4.jpg">
+					<img class="xs-display-none sect-break under animateblock btm" src="images/brandi/Brandi3.jpg">
 				</div>
 			</div>
 			<div class="row">
@@ -491,6 +493,7 @@
 				<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 					<img class="animateblock btm xs-display-none" src="images/brandi/Supplied-Brandi5.jpg">
 					<div class="caption">
+						<p>A sunset snap at Treasure Island.</p>
 						<p class="italc cred">Courtesy of Brandi Riley</p>
 					</div>
 				</div>
@@ -1217,7 +1220,7 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Montana De Oro State Park.</p>
+					<p>Watch the Pacific Ocean waves roll in against a backdrop of cliffs at Montaña De Oro State Park.</p>
 					<p class="italc cred">Ron Thomas/Getty Images</p>
 				</div>
 			</div>
@@ -1261,7 +1264,7 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Yosemite National Park</p>
+					<p>Yosemite National Park offers epic selfie opportunities.</p>
 					<p class="italc cred">Adam Hester/Getty Images</p>
 				</div>
 				<div class="caption">
@@ -1269,7 +1272,7 @@
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
 						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
 					</svg>
-					<p>Yosemite National Park</p>
+					<p>Yosemite has hiking trails for all skill levels.</p>
 					<p class="italc cred">Adam Hester/Getty Images</p>
 				</div>
 			</div>
@@ -1283,7 +1286,7 @@
 			<div class="col-xs-12 col-md-9">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca7.jpg">
 				<div class="caption">
-					<p>Mono Lake Beach</p>
+					<p>Visit a different kind of beach, with cool rocks to boot, at Mono Lake.</p>
 					<p class="italc cred inline no-left-margin">Alan Levenson/Getty Images</p>
 				</div>
 			</div>
