More responsive blogger styles added

--- a/index.html
+++ b/index.html
@@ -359,8 +359,12 @@
 				<div class="blogger-profile-wrap clearfix">
 					<div class="left-quadrant">
 						<div class="btm-row">
-							<h1>Brandi Riley</h1>
+							<div class="inner-txt-wrap">
+								<h1>Brandi Riley</h1>
+								<h4 class="mob-location"><span class="dvdr">|</span> Oakland, CA</h4>
+							</div>
 						</div>
+						<img class="mobile-blogger" src="images/brandi/Brandi-profile.jpg">
 					</div>
 					<div class="right-quadrant">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
@@ -988,7 +992,9 @@
 					<div class="left-quadrant">
 						<div class="btm-row">
 							<h1>Pattie Cordova</h1>
+							<h4 class="mob-location"><span class="dvdr">|</span> Los Angeles, CA</h4>
 						</div>
+						<img class="mobile-blogger" src="images/pattie/Pattie-profile.jpg">
 					</div>
 					<div class="right-quadrant">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
@@ -1451,7 +1457,9 @@
 					<div class="left-quadrant">
 						<div class="btm-row">
 							<h1>Justine Howell</h1>
+							<h4 class="mob-location"><span class="dvdr">|</span> Temecula, CA</h4>
 						</div>
+						<img class="mobile-blogger" src="images/justine/Justine_profile.jpg">
 					</div>
 					<div class="right-quadrant">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
