Replaced all Arrows with pngs

--- a/index.html
+++ b/index.html
@@ -364,10 +364,7 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
-						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-						</svg>
+						<img class="arrow" src="assets/arrow.png">
 						<div class="btm-row">
 							<h4>Oakland, CA</h4>
 						</div>
@@ -399,18 +396,12 @@
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Brandi's daughter poses at Children's Fairyland.</p>
 					<p class="italc cred">Courtesy of Brandi Riley</p>
 				</div>
 				<div class="xs-display-none caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-down" src="assets/arrow.png">
 					<p>All aboard! Brandi and her daughter next to the steam train at Tilden Park.</p>
 					<p class="italc cred">Courtesy of Brandi Riley</p>
 				</div>
@@ -447,18 +438,12 @@
 				</div>
 				<div class="col-xs-5 col-md-5">
 					<div class="caption">
-						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-						</svg>
+						<img class="arrow rotate-left" src="assets/arrow.png">
 						<p>Don't miss the chance to drive across the iconic Golden Gate Bridge.</p>
 						<p class="italc cred">Narvikk/Getty Images</p>
 					</div>
 					<div class="caption">
-						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-						</svg>
+						<img class="arrow rotate-down" src="assets/arrow.png">
 						<p>Life on the water in Sausalito.</p>
 						<p class="italc cred">123/Getty Images</p>
 					</div>
@@ -995,10 +980,7 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
-						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-						</svg>
+						<img class="arrow" src="assets/arrow.png">
 						<div class="btm-row">
 							<h4>Los Angeles, CA</h4>
 						</div>
@@ -1033,10 +1015,7 @@
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Experience a slice of history on the streets of Solvang.</p>
 					<p class="italc cred">Fox Lei/Shutterstock</p>
 				</div>
@@ -1060,18 +1039,12 @@
 			</div>
 			<div class="col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Explore the family-owned farms California's Central Valley is known for.</p>
 					<p class="italc cred">Hal Bergman/Getty Images</p>
 				</div>
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-down" src="assets/arrow.png">
 					<p>Pattie's son learns to ride in the park.</p>
 					<p class="italc cred">Courtesy of Pattie Cordova</p>
 				</div>
@@ -1208,18 +1181,12 @@
 			</div>
 			<div class="xs-display-none col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Pull over at a turnout to snap a picture of the iconic Bixby Bridge.</p>
 					<p class="italc cred">Thomas Kurmeier/Getty Images</p>
 				</div>
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-down" src="assets/arrow.png">
 					<p>Watch the Pacific Ocean waves roll in against a backdrop of cliffs at Montaña De Oro State Park.</p>
 					<p class="italc cred">Ron Thomas/Getty Images</p>
 				</div>
@@ -1260,18 +1227,12 @@
 			</div>
 			<div class="xs-display-none col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow" src="assets/arrow.png">
 					<p>Yosemite National Park offers epic selfie opportunities.</p>
 					<p class="italc cred">Adam Hester/Getty Images</p>
 				</div>
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Yosemite has hiking trails for all skill levels.</p>
 					<p class="italc cred">Adam Hester/Getty Images</p>
 				</div>
@@ -1458,10 +1419,7 @@
 						</div>
 					</div>
 					<div class="right-quadrant">
-						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-							<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-							<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-						</svg>
+						<img class="arrow" src="assets/arrow.png">
 						<div class="btm-row">
 							<h4>Temecula, CA</h4>
 						</div>
@@ -1500,18 +1458,12 @@
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Homer and the gang outside the Kwik-E-Mart.</p>
 					<p class="italc cred">Courtesy of Universal Studios Hollywood</p>
 				</div>
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-down" src="assets/arrow.png">
 					<p>Characters at LEGOLAND pose outside the LEGOLAND Hotel.</p>
 					<p class="italc cred">LEGOLAND California Resort</p>
 				</div>
@@ -1552,19 +1504,13 @@
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
-					<p>Harbor seals and sea lions catch rays in La Jolla.</p>
+					<img class="arrow" src="assets/arrow.png">
+					<p>Getting up close and personal with fish at the Aquarium of the Pacific.</p>
 					<p class="italc cred">Courtesy of Justine Howell</p>
 				</div>
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
-					<p>Getting up close and personal with fish at the Aquarium of the Pacific.</p>
+					<img class="arrow rotate-left" src="assets/arrow.png">
+					<p>Harbor seals and sea lions catch rays in La Jolla.</p>
 					<p class="italc cred">Courtesy of Justine Howell</p>
 				</div>
 			</div>
@@ -1598,10 +1544,7 @@
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>San Clemente pier. <span class="italc cred inline">Compassandcamera/Getty Images</span></p>
 				</div>
 			</div>
@@ -1656,18 +1599,12 @@
 			</div>
 			<div class="col-xs-5 col-md-5">
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow" src="assets/arrow.png">
 					<p>A hiker pauses at Idyllwild.</p>
 					<p class="italc cred">Thomas Northcut/Getty Images</p>
 				</div>
 				<div class="caption">
-					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
-						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
-						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
-					</svg>
+					<img class="arrow rotate-left" src="assets/arrow.png">
 					<p>Follow the winding paths at the Santa Rosa Plateau Ecological Reserve.</p>
 					<p class="italc cred">Jack Goldfarb/Getty Images</p>
 				</div>
