--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 				<h3>Oakland and Berkeley</h3>
 				<p>I know, I know, everyone loves San Francisco. I do, too! You don't have to rush into the city during your Northern California visit, though. In fact, it's a good idea to pace yourself, especially if you're traveling with children. Starting in San Francisco's neighboring cities, Oakland and Berkeley, is a great way to start your vacation, and set the tone for the trip. Besides, they're both extraordinarily family-friendly, with plenty to do and lots to keep the kiddos occupied and engaged.</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/brandi/oakland.jpg">
 				<div class="caption">
 					<p>Oakland at night. <span class="italc cred inline">Silentfoto/Getty Images</span></p>
@@ -430,8 +430,8 @@
 				<h5>Shorebird Park Nature Center and Adventure Playground</h5>
 				<p>When you get your second wind, take the family to Shorebird Park Nature Center and Adventure Playground for another interesting experience.  A quintessentially Berkeley attraction, this park is unlike any playground you've ever been to. There's a zip line that kids and adults can ride on, and opportunities for children to build things with real hammers and nails, and to use paint to decorate their very own fort. The Shorebird Park Nature Center and Adventure Playground might be your kiddo's favorite part of the entire day!</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
-				<img class="sect-break under animateblock btm" src="images/brandi/Brandi3.jpg">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
+				<img class="sect-break under animateblock btm" src="images/brandi/Brandi2.jpg">
 			</div>
 		</div>
 		<div class="row">
@@ -477,8 +477,8 @@
 					<p>Since it's one of the most iconic bridges in the country, you have to go over the Golden Gate Bridge if you're in Northern California. Every few weeks I try to sweet-talk my husband into driving me over the bridge because I absolutely love the views! Not only will your kids be impressed by the sheer size and beauty of the bridge, but it takes you to one of the most lovely little cities in our area.</p>
 					<h5>Sausalito</h5>
 				</div>
-				<div class="col-md-5 col-md-offset-1 col-xs-5 col-xs-offset-1">
-					<img class="xs-display-none sect-break under animateblock btm" src="images/brandi/Brandi3.jpg">
+				<div class="xs-display-none col-md-5 col-xs-5 col-xs-offset-1 col-md-offset-1">
+					<img class="sect-break under animateblock btm" src="images/brandi/Brandi3.jpg">
 				</div>
 			</div>
 			<div class="row">
@@ -493,8 +493,8 @@
 					<h5>Yosemite National Park</h5>
 					<p>If you are coming to Northern California and you only have a few days, you MUST go to Yosemite National Park. It's about a 2.5-hour drive from Oakland, so if you start early in the morning, you'll have plenty of time to explore. One of the greatest parks in our country, Yosemite is absolutely breathtaking. When you and your family experience the amazing valley and beautiful waterfalls, you'll be reminded of how beautiful our country truly is.</p>
 				</div>
-				<div class="col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
-					<img class="animateblock btm xs-display-none" src="images/brandi/Supplied-Brandi5.jpg">
+				<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
+					<img class="animateblock btm" src="images/brandi/Supplied-Brandi5.jpg">
 					<div class="caption">
 						<p>A sunset snap at Treasure Island.</p>
 						<p class="italc cred">Courtesy of Brandi Riley</p>
@@ -997,7 +997,7 @@
 							<h1>Pattie Cordova</h1>
 							<h4 class="mob-location"><span class="dvdr">|</span> Los Angeles, CA</h4>
 						</div>
-						<img class="mobile-blogger" src="images/pattie/Pattie-profile.jpg">
+						<img class="mobile-blogger" src="images/pattie/Pattie_profile.jpg">
 					</div>
 					<div class="right-quadrant">
 						<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
@@ -1024,7 +1024,7 @@
 				<h3>Solvang</h3>
 				<p>About an hour away from Santa Barbara is a quaint little town called Solvang. Driving into Solvang will make you feel as though you're stepping back in time. You will immediately get the small-town feel (it has a population of about 5,500) as you drive down its one major road and past its mom-and-pop shops and well-known bakeries. Founded by a group of Danes in 1911, the town gives you the feeling that it hasn't changed much since then.</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/pattie/visiting-oceanside.jpg">
 				<div class="caption">
 					<p>Pattie and her crew strike a pose on a jetty.
@@ -1063,7 +1063,7 @@
 			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/pattie/central-valley.jpg">
 			</div>
-			<div class="col-md-5">
+			<div class="col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1211,7 +1211,7 @@
 			<div class="xs-display-none col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca2.jpg">
 			</div>
-			<div class="xs-display-none col-md-5">
+			<div class="xs-display-none col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1236,7 +1236,7 @@
 
 				<p>One cannot cruise up the PCH without stopping in Santa Cruz. Kids will love a trip to the Santa Cruz Beach Boardwalk, an amusement park (complete with the wooden Giant Dipper roller coaster, which first rolled out in 1924).</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/meet-cca/meet-cca3.jpg">
 			</div>
 		</div>
@@ -1257,13 +1257,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="xs-display-none col-md-7">
+			<div class="xs-display-none col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/meet-cca/meet-cca6.jpg">
 			</div>
 			<div class="col-xs-5 col-md-5 r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/meet-cca/meet-cca5.jpg">
 			</div>
-			<div class="xs-display-none col-md-5">
+			<div class="xs-display-none col-xs-5 col-md-5">
 				<div class="caption">
 					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
 						<circle class="bg-yellow" cx="9.6" cy="9.6" r="9.6"/>
@@ -1494,7 +1494,7 @@
 				<h3>Universal Studios Hollywood</h3>
 				<p>A really fun place for rides and live entertainment featuring your favorite movie characters, and their studio tour is amazing. We love seeing where some of our favorite movies were filmed!</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="animateblock btm" src="images/justine/KnottsBerryFarm.jpg">
 				<div class="caption">
 					<p>Camp Snoopy at Knott's Berry Farm. </br> <span class="italc cred inline no-left-margin">Courtesy of Knott's Berry Farm</span></p>
@@ -1546,7 +1546,7 @@
 				<h3>Tide Pools</h3>
 				<p>We love visiting the many tide pools in Southern California! One of our favorite spots is in La Jolla, called Children's Pool. There's a beach where you can look for small sea creatures and get up close and personal with the harbor seals and sea lions, who love to sun themselves!</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/legoland.jpg">
 			</div>
 		</div>
@@ -1554,7 +1554,7 @@
 			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/supplied_justine_2.jpg">
 			</div>
-			<div class="xs-display-none col-md-5 r-rail-above">
+			<div class="xs-display-none col-xs-5 col-md-5 r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_1.jpg">
 			</div>
 			<div class="col-xs-5 col-md-5">
@@ -1647,7 +1647,7 @@
 				<h3>Santa Rosa Plateau</h3>
 				<p>Our all-time favorite place to hike! Gorgeous isn't a big enough word to describe this area. There are many trails to choose from and it's fairly flat, so it's easy for children to join the fun! We pack a picnic and head out for an afternoon together often, and we always see something new.</p>
 			</div>
-			<div class="xs-display-none col-md-5 col-md-offset-1">
+			<div class="xs-display-none col-xs-5 col-xs-offset-1 col-md-5 col-md-offset-1">
 				<img class="sect-break under animateblock btm" src="images/justine/supplied_justine_6.jpg">
 				<div class="caption">
 					<p>Feeding the animals at Bates Nut Farm.<span class="italc cred inline">Courtesy of Justine Howell</span></p>
@@ -1658,7 +1658,7 @@
 			<div class="col-xs-7 col-md-7">
 				<img class="over animateblock btm" src="images/justine/supplied_justine_3.jpg">
 			</div>
-			<div class="xs-display-none col-md-5 r-rail-above">
+			<div class="xs-display-none col-xs-5 col-md-5 r-rail-above">
 				<img class="sect-break under animateblock btm" src="images/justine/idyllwild.jpg">
 			</div>
 			<div class="col-xs-5 col-md-5">
@@ -1986,17 +1986,8 @@
 </section>
 
 <!-- BELLA VIDEO -->
-<!-- <svg class="section-marker" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 38.2 22.8">
-	<polygon class="bg-shape" points="38.2 11.4 19.1 22.8 0 11.4 19.1 0 "/>
-	<text transform="matrix(1 0 0 1 15.8559 16.241)" class="letter">S</text>
-	<line class="line" x1="5.6" y1="11.4" x2="13.6" y2="11.4"/>
-	<line class="line" x1="24.6" y1="11.4" x2="32.6" y2="11.4"/>
-</svg>
-<section class="bg-img-container-wrap northern" id="video-bella">
-=======
 <img class="section-marker" src="images/sthrn-sect-icon.svg">
 <section class="bg-img-container-wrap southern" id="video-bella">
->>>>>>> master
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
@@ -2018,7 +2009,7 @@
 			</div>
 		</div>
 	</div>
-</section> -->
+</section>
 
 <script src="js/bootstrap.min.js"></script>
 
