--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2">
+			<div class="col-xs-12 col-md-8 col-md-offset-2">
 				<h2>Northern California offers some of the most stunning and diverse campsites in the world. Explore these six options.</h2>
 				<p>Whether you want to sleep at the feet of giants in Redwoods National Park or wake up at the water's edge in Lake Tahoe, adventure seekers will marvel at Northern California's options. From off-the-grid rustic sites to the ultimate glamping experience, here are six options for planning your next camping excursion.</p>
 			</div>
