--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<script>
+__reach_config = {
+///pid: '544976bee79548dcfd0001e9',
+pid: ‘000000000000000000000000’,
+title: 'State of Play',
+url: 'http://sponsored.people.com/visitcalifornia',
+date: '2016-06-01 10:00:00',
+tags: ['sponsored::site::People’,’sponsored::Visit California’],
+ignore_errors: false,
+};
+(function(){
+var s = document.createElement('script');
+s.async = true;
+s.type = 'text/javascript';
+s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js';
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(s);
+})();
+</script>
+
+<script type="text/javascript">(function(){var a=document,b=a.createElement("script"),a=a.getElementsByTagName("script")[0];b.type="text/javascript";b.async=!0;b.src="http://s.moatads.com/timeinccontent436vGWy49/moatcontent.js";a.parentNode.insertBefore(b,a)})(); 
+</script>
+
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="description" content="">
+	<meta name="description" content="Discover why a trip to California makes the ultimate family vacation. Explore Northern, Central, and Southern California's places to play.">
+	<meta name = "viewport" content = "user-scalable=no, width=device-width">
+    <link rel="canonical" href="http://sponsored.people.com/visitcalifornia"/>
+    <meta property="og:title" content="State of Play" />
+    <meta property="og:url" content="http://sponsored.people.com/visitcalifornia"/>
+    <meta property="og:site_name" content="State of Play"/>
+    <meta property="og:image" content="http://sponsored.people.com/visitcalifornia" />
+    <meta property="og:description" content="Discover why a trip to California makes the ultimate family vacation. Explore Northern, Central, and Southern California's places to play."/>
 	<meta name="keywords" content="">
 	<meta name="author" content="The Foundry @ Time Inc.">
 	<script src="https://use.typekit.net/sbn1noz.js"></script>
