--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 </section>
 
 <section class="hero full-page" id="main-hero">
-	<img src="images/title-svg-logo.svg" class="main-title" id="main-title-logo">
+	<div class="parralax-credit"><p>Chris Axe/Getty Images</p></div>
+	<img src="images/title-svg-logo.svg" class="main-title">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
