--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 <section class="hero full-page" id="main-hero">
 	<div class="parralax-credit"><p>Chris Axe/Getty Images</p></div>
 	<img src="images/title-svg-logo.svg" class="main-title">
+	<div class="title-trtmnt-mob">
+		<h1>State of Play</h1>
+		<h2>Discover why a trip to California makes the ultimate family vacation. Explore Northern, Central, and Southern California's places to play.</h2>
+		<img class="vca-hero-logo" src="assets/VCA_white.gif">
+	</div>
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
 		<source src="video/VCA_Family_Hero_General_v1.mp4" type="video/mp4">Your browser does not support the video tag.
