+Updated Solvang Photo in Pattie +Add Disclaimer to Video Section

--- a/index.html
+++ b/index.html
@@ -2014,6 +2014,22 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 	</div>
 </section>
 
+<div class="container-fluid article" id="photo-disclaimer">
+	<div class="row">
+		<div class="col-md-12">				
+			<p>Some photographs in this content are used for illustrative purposes only.</p>
+		</div>
+	</div>
+</div>
+
+<section id="footer">
+	<ul>
+		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=E" target="_blank">Privacy Policy</a></li>
+		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/generic_privacy_new.html?dnp-source=B#california" target="_blank">Your California Privacy Rights</a></li>
+		<li><a href="https://subscription.timeinc.com/storefront/privacy/people/privacy_terms_service.html" target="_blank">Terms of Service</a></li>
+	</ul>
+</section>
+
 <script src="js/bootstrap.min.js"></script>
 
 </body>
