Fixed Twitter Language
-Test Facebook once live

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 	<a href="http://www.people.com/people/" target="_blank"><div class="people-logo"></div></a>
 	<ul class="social">
 		<li class="facebook">
-			<a href="http://sponsored.travelandleisure.com/emirates/#bestsunsets?xid=12" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 'facebook-share-dialog', 'width=626,height=436'); return false;">
+			<a href="http://sponsored.people.com/visitcalifornia" onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href), 'facebook-share-dialog', 'width=626,height=436'); return false;">
 				<img src="assets/fb.png">
 			</a>
 		</li>
 		<li class="twitter">
 			<script>
 				var shareURL=encodeURIComponent(location.href);
-				var shareText = encodeURIComponent('Discover Dubai\'s world-class golf, opulent cuisine, premier pampering, and more.');
+				var shareText = encodeURIComponent('Discover why a trip to California makes the ultimate family vacation. http://sponsored.people.com/visitcalifornia');
 				document.write('<a class="tweet" href="http://twitter.com/intent/tweet?url='+shareURL+'&text='+shareText+'" target="_blank" utag.link({click_id: share-twitter});><img src="assets/twitter.png" alt=""></a>'); 
 			</script>
 			<a class="tweet" href="http://sponsored.travelandleisure.com/emirates/#bestsunsets?xid=12" target="_blank" utag.link({click_id: share-twitter});>
