--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 	<link type="text/css"; rel="stylesheet"; href="css/reset.css">
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
 	<link rel="stylesheet" href="css/jquery.fancybox.css" type="text/css" media="screen" />
-	<!-- <link rel="icon" href="assets/favicon.png"> -->
+	<link rel="icon" href="assets/favicon.png">
 	<title>State of Play</title>
 </head>
 
