--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 	<div class="title-trtmnt-mob">
 		<h1>State of Play</h1>
 		<h2>Discover why a trip to California makes the ultimate family vacation. Explore Northern, Central, and Southern California's places to play.</h2>
-		<img class="vca-hero-logo" src="assets/VCA_white.gif">
+		<img class="vca-hero-logo" src="assets/VCA_white_gold.png">
 	</div>
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_General_v1.webmhd.webm" type="video/webm">
@@ -377,7 +377,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 </section>
 
 <section class="hero region full-page" id="nca-hero">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
+	<img src="assets/VCA_white_gold.png" class="vca-hero-logo">
 	<img src="images/northern-title.svg" class="main-title">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_Northern_v2.webmhd.webm" type="video/webm">
@@ -1008,7 +1008,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 </section>
 
 <section class="hero region full-page" id="cca-hero">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
+	<img src="assets/VCA_white_gold.png" class="vca-hero-logo">
 	<img src="images/central-title.svg" class="main-title">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_Central_v2.webmhd.webm" type="video/webm">
@@ -1460,7 +1460,7 @@ s.src = document.location.protocol + '//d8rk54i4mohrb.cloudfront.net/js/reach.js
 </section>  
 
 <section class="hero region full-page" id="sca-hero">
-	<img src="assets/VCA_white.gif" class="vca-hero-logo">
+	<img src="assets/VCA_white_gold.png" class="vca-hero-logo">
 	<img src="images/southern-title.svg" class="main-title">
 	<video autoplay loop muted>
 		<source src="video/VCA_Family_Hero_Southern_v2.webmhd.webm" type="video/webm">
